# ReactionTimer

./: .gitignore  CMakeLists.txt
ext/: CMakeLists.txt
ext/sfml-2.4.2/: README.md  install_sfml_dependencies.sh
ext/sfml-2.4.2/extlibs/libs-msvc-universal/x64/: flac.lib  jpeg.lib  ogg.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib
ext/sfml-2.4.2/extlibs/libs-msvc-universal/x86/: flac.lib  freetype.lib  jpeg.lib  ogg.lib  openal32.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib
ext/sfml-2.4.2/extlibs/libs-msvc/x64/: flac.lib  freetype.lib  jpeg.lib  ogg.lib  openal32.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib
ext/sfml-2.4.2/extlibs/libs-msvc/x86/: flac.lib  jpeg.lib  ogg.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib
ext/sfml-2.4.2/extlibs/libs-osx/Frameworks/FLAC.framework/Versions/Current/: FLAC
ext/sfml-2.4.2/extlibs/libs-osx/Frameworks/OpenAL.framework/: OpenAL
ext/sfml-2.4.2/extlibs/libs-osx/Frameworks/freetype.framework/Versions/A/: freetype
ext/sfml-2.4.2/extlibs/libs-osx/Frameworks/ogg.framework/Versions/Current/: ogg
ext/sfml-2.4.2/extlibs/libs-osx/Frameworks/vorbis.framework/: vorbis
ext/sfml-2.4.2/extlibs/libs-osx/Frameworks/vorbisenc.framework/Versions/A/: vorbisenc
ext/sfml-2.4.2/extlibs/libs-osx/Frameworks/vorbisfile.framework/Versions/A/: vorbisfile
ext/sfml-2.4.2/tools/xcode/templates/SFML/SFML App.xctemplate/: TemplateIcon.icns
src/: CMakeLists.txt  main.cpp
